--- a/code/views/page/about.ejs
+++ b/code/views/page/about.ejs
@@ -24,8 +24,8 @@
  <!-- Content -->
     <div class="container">
         <h1>About Project 3</h1>
-        <h2>Author: </h2>
-        <p>Description: </p>
+        <h2>Author: Kaiden Thrailkill</h2>
+        <p>Description: This application checks if a phone number is seven digits long.</p>
     </div>
 
     <!-- Bootstrap core JavaScript -->
