--- a/code/views/page/index.ejs
+++ b/code/views/page/index.ejs
@@ -1,39 +1,104 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Comp 4420 Project 3</title>
-    <meta name="description" content="Project 3 Starter for Comp 4420 University of West Georgia Spring 2024">
-    <meta name="author" content="Comp 4420">
-    <!-- Bootstrap CSS Reset -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <title>Comp 4420 Project 3</title>
+  <meta name="description" content="Project 3 Starter for Comp 4420 University of West Georgia Spring 2024">
+  <meta name="author" content="Comp 4420">
+  <!-- Bootstrap CSS Reset -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: black;
+      height: 100vh;
+      margin: 0;
+      font-family: "Jersey 10", sans-serif;
+      font-weight: 400;
+      font-style: normal;
+
+    }
+    nav {
+      background-color: black;
+      color: white;
+      font-size: 30px;
+      font-weight: 400;
+      font-style: normal;
+      margin-bottom: 20px;
+    }
+    .nav-link {
+      color: #ffdde1;
+    }
+    .nav-link:hover {
+      color: #0400ff;
+    }
+    .container {
+      padding: 20px;
+      text-align: center;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .gradient-text {
+      background: linear-gradient(to right, #0400ff, #ffdde1);
+      -webkit-background-clip: text;
+      color: transparent;
+    }
+    label, input, optgroup, select, textarea {
+      margin: 0;
+      border-radius: 10px;
+      font-family: inherit;
+      font-size: 90px;
+      text-align: center;
+      line-height: inherit;
+    }
+    input[type="text"] {
+      width: 500px;
+      height: 100px;
+      padding: 12px 20px;
+      margin: 8px 0;
+      box-sizing: border-box;
+      border: 2px solid #fff;
+      border-radius: 10px;
+    }
+
+    button {
+      text-transform: none;
+      font-size: 50px;
+      border-radius: 10px;
+      background: linear-gradient(to right, #0400ff, #ffdde1);
+    }
+
+
+  </style>
 </head>
 <body>
- <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/About">About
-              </a>
-            </li>
-          </ul>
-    </nav>
- <!-- Content -->
-    <div class="container">
-        <form action="/api/check_phone_number" method="POST">
-          Phone Number: <input type="text" name="number"><br>
-         <button type="submit">Check Phone Number</button>
-        </form>
-    </div>
+  <nav class="navbar navbar-expand-lg static-top">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="/">Home</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/About">About</a>
+      </li>
+    </ul>
+  </nav>
+  <!-- Content -->
+  <div class="container">
+    <form action="/api/check_phone_number" method="POST">
+      <label class="gradient-text" for="number">Phone Number:</label><br>
+      <input type="text" id="number" name="number"><br>
+      <button type="submit">Check Phone Number</button>
+    </form>
+  </div>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="/js/jquery.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
-
-
-
